# mvcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py  test.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
mvcp/: __init__.py  cli.py  core.py  server.py  tool.py
tests/: test_cli.py  test_core.py
